# tensorflow

./: .bazelrc  .gitignore  build-asan.sh  run_kernel_tests.py
crashes/: AddManySparseToTensorsMapOp.failed.140693  AddManySparseToTensorsMapOp.failed.225547  AddManySparseToTensorsMapOp.time.140693  AddManySparseToTensorsMapOp.time.225547  AddNOp.failed.106740  AddNOp.failed.192030  AddNOp.time.106740  AddNOp.time.192030  AddNOp.time.330214  AddSparseToTensorsMapOp.failed.140693  AddSparseToTensorsMapOp.failed.225547  AddSparseToTensorsMapOp.time.140693  AddSparseToTensorsMapOp.time.225547  AddSparseToTensorsMapOp.time.361863  AdjustContrastOpV2Base.failed.411153  AdjustContrastOpV2Base.failed.502109  AdjustContrastOpV2Base.failed.592488  AdjustContrastOpV2Base.time.411153  AdjustContrastOpV2Base.time.502109  AdjustContrastOpV2Base.time.592488  AdjustHueOpBase.failed.1015293  AdjustHueOpBase.failed.1207080  AdjustHueOpBase.failed.1215035  AdjustHueOpBase.failed.411153  AdjustHueOpBase.failed.502109  AdjustHueOpBase.time.1015293  AdjustHueOpBase.time.411153  AdjustHueOpBase.time.502109  AdjustSaturationOpBase.failed.416620  AdjustSaturationOpBase.failed.507739  AdjustSaturationOpBase.failed.598188  AdjustSaturationOpBase.time.416620  AdjustSaturationOpBase.time.507739  ApproximateEqualOp.failed.152407  ApproximateEqualOp.time.152407  ArgOp.failed.110998  ArgOp.failed.196061  ArgOp.time.110998  ArgOp.time.196061  AudioSpectrogramOp.failed.1246998  (+1408 more)
crashes/no-asan/: AddManySparseToTensorsMapOp.failed.361863  AddManySparseToTensorsMapOp.time.361863  AddNOp.failed.330214  AddSparseToTensorsMapOp.failed.361863  AdjustHueOpBase.failed.592488  AdjustHueOpBase.time.1207080  AdjustHueOpBase.time.1215035  AdjustHueOpBase.time.592488  AdjustSaturationOpBase.time.598188  ApproximateEqualOp.failed.372389  ApproximateEqualOp.time.372389  ArgOp.time.331021  AudioSpectrogramOp.time.1246998  AvgPooling3dGradOp.run  AvgPooling3dGradOp.time.345722  AvgPoolingGradOp.time.355137  AvgPoolingOp.time.346552  BCastArgsOp.failed.333115  BCastGradArgsOp.failed.330215  BCastGradArgsOp.time.330215  BandedTriangularSolveOpCpu.failed.345918  BaseCandidateSamplerOp.time.350201  BatchNormGradOp.failed.599207  BatchNormGradOp.run  BatchNormGradOp.time.599207  BatchNormOp.failed.381973  BatchToSpaceNDOp.failed.344458  BatchToSpaceNDOp.time.344458  BetaincOp.failed.334000  BiasGradOp.failed.360806  BiasGradOp.time.360806  BincountOp.time.2405832  BoostedTreesCreateQuantileStreamResourceOp.failed.334387  BoostedTreesCreateQuantileStreamResourceOp.run  BoostedTreesCreateQuantileStreamResourceOp.time.821752  BoostedTreesExampleDebugOutputsOp.time.334487  BoostedTreesPredictOp.run  BoostedTreesPredictOp.time.821455  BoostedTreesSparseAggregateStatsOp.run  BoostedTreesSparseCalculateBestFeatureSplitOp.run  (+394 more)
crashes/run_feb01/: AddManySparseToTensorsMapOp.failed.28028  AddManySparseToTensorsMapOp.time.28028  AddNOp.time.24731  AddSparseToTensorsMapOp.failed.28028  AddSparseToTensorsMapOp.time.28028  AdjustContrastOpV2Base.failed.30424  AdjustContrastOpV2Base.time.30424  AdjustHueOpBase.failed.31312  ArgOp.failed.32257  (+526 more)
fuzz-utils/: collect_registered_kernels.py  collect_stats.py  get_coverage.py  get_running_times.py  kernel_regs.txt  modified_kernels.txt  run_kernel_tests.py  run_kernel_tests.py.orig  synth.py  synth.py.orig
fuzz-utils/inject-fuzzer/: CMakeLists.txt  cpu_all.txt  cpu_fuzzed.txt  cpu_modified.txt  cpu_skipped.txt  get_instrum_stats.py  get_kernel_stats.py  get_total_stats.py  gpu_all.txt  gpu_modified.txt  gpu_skipped.txt  inject-ignore  inject-ignore.orig  modified_kernels.txt  output.txt  run_gettypes.sh  run_inject.sh  run_inject.sh.orig  skipped_kernels.txt  tmp
fuzz-utils/inject-fuzzer/.cache/clangd/index/: InjectFuzzer.cpp.282FB40A256CA59A.idx  InjectFuzzer.h.552BB72734478FF3.idx  InjectFuzzerMain.cpp.0AA2166188F2ECB8.idx
fuzz-utils/inject-fuzzer/include/: InjectFuzzer.h  InjectGetTypes.h
fuzz-utils/inject-fuzzer/lib/: CMakeLists.txt  InjectFuzzer.cpp  InjectFuzzer.cpp.orig  InjectGetTypes.cpp
fuzz-utils/inject-fuzzer/tools/: CMakeLists.txt  InjectFuzzerMain.cpp  InjectGetTypesMain.cpp
inject-fuzzer/: .gitignore  inject-ignore  run_inject.sh
inject-fuzzer/tools/: CMakeLists.txt  InjectFuzzerMain.cpp
synth/: synth.py
synthesized/: reproducer.sh  test_repro.sh
tensorflow/: BUILD  tf_exported_symbols.lds  tf_version_script.lds
types/: AddManySparseToTensorsMapOp.types  AddNOp.types  AddSparseToTensorsMapOp.types  AdjustContrastOpV2Base.types  AdjustSaturationOpBase.types  ApproximateEqualOp.types  ArgOp.types  AssertOp.types  AvgPooling3dGradOp.types  AvgPoolingGradOp.types  AvgPoolingOp.types  BCastArgsOp.types  BCastGradArgsOp.types  BandedTriangularSolveOpCpu.types  BaseBatchMatMulOp.types  BaseCandidateSamplerOp.types  BaseMatrixTriangularSolveOp.types  BatchNormGradOp.types  BatchNormOp.types  BatchToSpaceNDOp.types  BetaincOp.types  BiasGradOp.types  BincountOp.types  BlockLSTMGradOp.types  BlockLSTMOp.types  BoostedTreesAggregateStatsOp.types  BoostedTreesBucketizeOp.types  BoostedTreesCalculateBestFeatureSplitV2.types  BoostedTreesCalculateBestGainsPerFeatureOp.types  BoostedTreesCreateEnsembleOp.types  BoostedTreesCreateQuantileStreamResourceOp.types  BoostedTreesExampleDebugOutputsOp.types  BoostedTreesMakeQuantileSummariesOp.types  BoostedTreesPredictOp.types  BoostedTreesSparseAggregateStatsOp.types  BoostedTreesSparseCalculateBestFeatureSplitOp.types  BoostedTreesTrainingPredictOp.types  BroadcastToOp.types  BucketizeOp.types  CSRMatMulCPUOp.types  (+334 more)
(+2901 files in other folders)
